# ecommerce-data-extractor

./: .gitignore  Makefile
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: bigquery.py  cloud_scheduler.py  export.py  filters.py  job_logs.py  notifications.py  pagination.py  rate_limiter.py  read_only.py  scheduler.py  storage.py
backend/app/routers/: auth.py  bigquery.py  credentials.py  endpoints.py  expiry.py  export.py  extract.py  notification_settings.py  oauth.py  platforms.py  schedule.py  schema.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/auth/callback/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: BigQueryDestination.tsx  ColumnChooser.tsx  CredentialsDialog.tsx  DataPreview.tsx  EndpointPicker.tsx  ExportPanel.tsx  FilterSettings.tsx  JobList.tsx  NotificationSettings.tsx  PlatformSelector.tsx  RecordLimitControl.tsx  ScheduleSettings.tsx  StatusBar.tsx
frontend/src/lib/: api.ts
